tests/NormalTests/paczka1/fuzzy1/16200408.err
Error in line 5: yEjNmS A170 94,3
Error in line 10: S705 A170 75,7
Error in line 19: p1aH A568 53,8
Error in line 18: yEjNmS A568 46,2
Error in line 26: yEjNmS A170 59,1
